Aggiunto il fragment accreditamentoValidate

--- a/src/main/resources/templates/accreditamento/accreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoEdit.html
@@ -63,7 +63,11 @@
 					<div class="x_title">
 						<h2 th:text="${#messages.msg('label.provider_accreditamento') + ' ' + accreditamentoWrapper.provider.denominazioneLegale + ' (' + accreditamentoWrapper.provider.codiceFiscale + ') ' + #messages.msg('label.tipo_provider') + ' ' + accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></h2>
 						<div class="pull-right buttons-header">
-							<button type="button" class="btn btn-primary pull-right" th:text="#{label.torna_in_visualizzazione}" onclick="switchMode()"></button>
+							<a th:if="${accreditamentoWrapper.canSend}"
+									class="btn btn-success pull-right"
+									th:text="#{label.invia_domanda}"
+									th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/send|}"></a>
+							<button type="button" class="btn btn-primary pull-right" th:text="#{label.torna_in_visualizzazione}" onclick="switchMode('show')"></button>
 						</div>
 						<div class="clearfix"></div>
 					</div>
@@ -75,7 +79,7 @@
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:include="accreditamento/accreditamentoFragment :: accreditamento(true)"></th:block>
+					<th:block th:include="accreditamento/accreditamentoFragment :: accreditamento('edit')"></th:block>
 
 				</div>
 			</div>
@@ -88,9 +92,9 @@
 					console.log(tabSelected);
 				});
 
-				function switchMode() {
+				function switchMode(mode) {
 					var param = "?tab=" + tabSelected;
-					var url = [[@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/show|}]] + param;
+					var url = [[@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/|}]] + mode + param;
 					location.href = url;
 				}
 
