--- a/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
@@ -185,8 +185,7 @@
 								<div class="row" style="clear:both">
 									<div class="col-md-3 col-sm-3 col-xs-12"></div>
 									<div class="col-md-6 col-sm-6 col-xs-12" id="accreditamento_professioni">
-										<table id="professioni-discipline"
-											class="table table-striped table-bordered dt-responsive nowrap datatable-responsive-discipline"
+										<table class="professioni-discipline table table-striped table-bordered dt-responsive nowrap datatable-responsive-discipline"
 											cellspacing="0" width="100%">
 											<thead>
 												<tr>
