--- a/src/main/resources/templates/evento/eventoFragment.html
+++ b/src/main/resources/templates/evento/eventoFragment.html
@@ -265,7 +265,7 @@
 							<div class="row" style="clear: both">
 								<div class="col-md-3 col-sm-3 col-xs-12"></div>
 								<div class="col-md-6 col-sm-6 col-xs-12" id="evento_professioni-select">
-									<table id="professioni-discipline" class="table table-striped table-bordered dt-responsive nowrap datatable-responsive-discipline" cellspacing="0" width="100%">
+									<table class="professioni-discipline table table-striped table-bordered dt-responsive nowrap datatable-responsive-discipline" cellspacing="0" width="100%">
 										<thead>
 											<tr>
 												<th th:text="#{label.professione}">Professione</th>
