--- a/src/main/resources/templates/pianoFormativo/pianoFormativoFragment.html
+++ b/src/main/resources/templates/pianoFormativo/pianoFormativoFragment.html
@@ -6,26 +6,37 @@
 </head>
 <body>
 	<!-- tabella degli eventi del pianoFormativo -->
-	<th:block th:fragment="pianoFormativo(pianoFormativo, accreditamentoId, editabile, editabileFull, idEditabili)">
+	<th:block th:fragment="pianoFormativo(pianoFormativo, accreditamentoId, mode, editabileFull, idEditabili)">
 		<!-- differenzia se il piano formativo viene chiamato dall'accreditamento o dall'apposita sidebar -->
-		<th:block th:with="prefixURL=${accreditamentoId != null ? '/accreditamento/'+accreditamentoId : ''}">
+		<th:block th:with="prefixURL=${accreditamentoId != null ? '/accreditamento/'+accreditamentoId : ''},
+			urlParam=${mode != 'show' ? '?from='+mode : ''},
+			hasActionButtons=${mode != 'show'},
+			valutabile=${mode == 'validate'},
+			editabile=${mode == 'edit'}">
 
 				<div th:if="${(__${pianoFormativo}__ == null) or #lists.isEmpty(__${pianoFormativo}__.eventi)}" th:text="#{label.nessun_evento_piano_formativo}"></div>
 
-				<table th:unless="${(__${pianoFormativo}__ == null) or #lists.isEmpty(__${pianoFormativo}__.eventi)}" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%" th:classappend="${editabile ? 'datatable-responsive-evento-edit' : 'datatable-responsive-evento-show'}">
+				<table th:unless="${(__${pianoFormativo}__ == null) or #lists.isEmpty(__${pianoFormativo}__.eventi)}" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%" th:classappend="${'datatable-responsive-evento-'+mode}">
 					<thead>
 						<tr>
 							<th th:text="#{label.tipologia_evento}">Tipologia dell'evento</th>
-							<th th:unless="${editabile}" th:text="#{label.stato}">Stato</th>
-							<th th:if="${editabile}" th:text="#{label.azioni}">Azioni</th>
+							<th th:unless="${editabile}" th:text="${valutabile ? #messages.msg('label.stato_valutazione') : #messages.msg('label.stato_inserimento')}">label.stato_inserimento/valutazione</th>
+							<th th:if="${hasActionButtons}" th:text="#{label.azioni}">Azioni</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr th:each="evento, row : ${__${pianoFormativo}__.eventi}">
-							<td th:if="${editabile}"><a th:text="${evento.titolo}" th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/show?from=edit|}"></a></td>
-							<td th:unless="${editabile}"><a th:text="${evento.titolo}" th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/show|}"></a></td>
-							<th:block th:if="${editabile}">
-								<td>
+							<td><a th:text="${evento.titolo}" th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/show${urlParam}|}"></a></td>
+							<th:block th:unless="${editabile}">
+								<td th:if="${!evento.new}">
+									<i class="fa table-icon fa-check green" th:title="${valutabile ? #messages.msg('label.valutato') : #messages.msg('label.inserito')}"></i>
+								</td>
+								<td th:unless="${!evento.new}">
+									<i class="fa table-icon fa-remove red" th:title="${valutabile ? #messages.msg('label.non_valutato') : #messages.msg('label.non_inserito')}"></i>
+								</td>
+							</th:block>
+							<th:block th:if="${hasActionButtons}">
+								<td th:if="${editabile}">
 									<span style="white-space: nowrap">
 										<a th:if="${!evento.new and __${pianoFormativo}__.pianoModificabile and editabileFull}" th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/delete|}" class="btn btn-table double btn-danger"><span class="fa fa-trash"></span> <span th:text="#{label.elimina}"></span></a>
 										<a th:if="${evento.new or !__${pianoFormativo}__.pianoModificabile or !editabileFull}" class="btn btn-table double btn-danger disabled"><span class="fa fa-trash"></span> <span th:text="#{label.elimina}"></span></a>
@@ -34,13 +45,8 @@
 										<a th:if="${evento.new or (accreditamentoId == null and idIEditabili == null and !editabileFull) or (accreditamentoId != null and idEditabili != null and #lists.isEmpty(T(it.tredi.ecm.utils.Utils).getSubsetOfIdFieldEnum(idEditabili, evento.id,'EVENTO_PIANO_FORMATIVO')))}" class="btn btn-primary btn-table double disabled"><span class="fa fa-pencil"></span> <span th:text="#{label.modifica}">Modifica</span></a>
 									</span>
 								</td>
-							</th:block>
-							<th:block th:unless="${editabile}">
-								<td th:unless="${evento.new}">
-									<span class="fa table-icon fa-check green"></span>
-								</td>
-								<td th:if="${evento.new}">
-									<span class="fa table-icon fa-remove red"></span>
+								<td th:if="${valutabile}">
+									<a th:href="@{|${prefixURL}/provider/${__${pianoFormativo}__.provider.id}/pianoFormativo/${__${pianoFormativo}__.id}/evento/${evento.id}/validate|}" class="btn btn-primary btn-table single"><i class="fa fa-pencil"></i> <span th:text="#{label.valuta}">Valuta</span></a>
 								</td>
 							</th:block>
 						</tr>
