modifica classe css datatable discipline professioni (invece che id)

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -634,7 +634,7 @@ h2 {
 	box-shadow: none;
 }
 
-#professioni-discipline > tbody > tr > td {
+.professioni-discipline > tbody > tr > td {
 	padding: 0px;
 	padding-left: 8px;
 }
