--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -39,26 +39,31 @@
 						<div class="pull-right buttons-header">
 							<div class="dropdown pull-right">
 								<a class="btn btn-primary" th:text="#{label.indietro}" th:href="@{|/provider/${accreditamentoWrapper.provider.id}/accreditamento/list|}"></a>
-  								<button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown">
+  								<button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown"  th:if="${#authentication.principal.hasProfile('SEGRETERIA')}">
 									<span th:text="#{label.menu_azioni}"></span>
 									<span class="caret"></span>
 								</button>
+								<!-- menù raggruppato per segreteria -->
 								<ul class="dropdown-menu actions">
 									<li><a th:text="#{label.mostra_riepilogo}" onclick="populateShowAll()" data-toggle="modal" data-target=".modal-showAll"></a></li>
-									<!-- tasto modifica -->
-									<th:block th:if="${(#authentication.principal.hasProfile('PROVIDER') AND accreditamentoWrapper.accreditamento.bozza) OR #authentication.principal.hasProfile('SEGRETERIA')}">
-										<li class="divider actions"></li>
-										<li><a th:text="#{label.modifica}" onclick="switchMode('edit')"></a></li>
-									</th:block>
-									<!-- blocco pulsanti segreteria -->
-									<th:block th:if="${#authentication.principal.hasProfile('SEGRETERIA')}">
-										<li class="divider actions"></li>
-										<li><a th:text="#{label.abilita_id_editabili}" onclick="alert('TODO')"></a></li>
-										<li><a th:if="${accreditamentoWrapper.canPrendiInCarica}" th:href="@{''}" onclick="alert('TODO')" th:text="#{label.prendi_in_carica}"></a></li>
-										<li><a th:if="${accreditamentoWrapper.canAssegnaNuovoGruppo}" th:text="#{label.assegna_nuovo_gruppo}" onclick="alert('TODO')"></a></li>
-										<li><a th:if="${accreditamentoWrapper.canValutaDomanda}" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a></li>
-									</th:block>
+									<li class="divider actions"></li>
+									<li><a th:text="#{label.modifica}" onclick="switchMode('edit')"></a></li>
+									<li class="divider actions"></li>
+									<li><a th:text="#{label.abilita_id_editabili}" onclick="alert('TODO')"></a></li>
+									<li><a th:if="${accreditamentoWrapper.canPrendiInCarica}" th:href="@{''}" onclick="alert('TODO')" th:text="#{label.prendi_in_carica}"></a></li>
+									<li><a th:if="${accreditamentoWrapper.canAssegnaNuovoGruppo}" th:text="#{label.assegna_nuovo_gruppo}" onclick="alert('TODO')"></a></li>
+									<li><a th:if="${accreditamentoWrapper.canValutaDomanda}" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a></li>
 								</ul>
+								<!-- menù a pulsanti separati per il provider -->
+								<th:block th:if="${#authentication.principal.hasProfile('PROVIDER')}">
+									<a class="btn btn-primary" th:text="#{label.mostra_riepilogo}" onclick="populateShowAll()" data-toggle="modal" data-target=".modal-showAll"></a>
+									<a th:if="${accreditamentoWrapper.accreditamento.bozza}" class="btn btn-success" th:text="#{label.modifica}" onclick="switchMode('edit')"></a>
+								</th:block>
+								<!-- menù a pulsanti separati per il referee -->
+								<th:block th:if="${#authentication.principal.hasProfile('REFEREE')}">
+									<a class="btn btn-primary" th:text="#{label.mostra_riepilogo}" onclick="populateShowAll()" data-toggle="modal" data-target=".modal-showAll"></a>
+									<a th:if="${accreditamentoWrapper.canValutaDomanda}" class="btn btn-sucess" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a>
+								</th:block>
 							</div>
 						</div>
 						<div class="clearfix"></div>
