--- a/src/main/resources/templates/provider/providerEdit.html
+++ b/src/main/resources/templates/provider/providerEdit.html
@@ -10,7 +10,7 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.info_provider}">label.info_provider</h2>
+						<h2 th:text="#{label.modifica} + ' ' + #{label.info_provider}">label.info_provider</h2>
 						<div class="pull-right buttons-header">
 							<th:block th:unless="${#lists.isEmpty(providerWrapper.idEditabili)}">
 								<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formProvider" type="submit"></button>
@@ -20,7 +20,7 @@
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:include="provider/providerFragment :: provider(true)"></th:block>
+					<th:block th:include="provider/providerFragment :: provider('edit')"></th:block>
 
 				</div>
 			</div>
