--- a/src/main/resources/templates/provider/providerShow.html
+++ b/src/main/resources/templates/provider/providerShow.html
@@ -10,7 +10,7 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.info_provider}">label.info_provider</h2>
+						<h2 th:text="#{label.visualizzazione} + ' ' + #{label.info_provider}">label.info_provider</h2>
 						<div class="pull-right buttons-header">
 							<a th:if="${mode == null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoId}/show|}"></a>
 							<a th:if="${mode != null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoId}/${mode}|}"></a>
@@ -19,7 +19,7 @@
 					</div>
 
 					<div id="toModal">
-						<th:block th:include="provider/providerFragment :: provider(false)"></th:block>
+						<th:block th:include="provider/providerFragment :: provider('show')"></th:block>
 					</div>
 
 				</div>
