Bug fix context chiamata ajax selezione anagrafica

--- a/src/main/resources/templates/accreditamento/accreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoEdit.html
@@ -102,7 +102,8 @@
 					$('#nuova_anagrafica').prop('href', [[@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/new?ruolo=|}]]+ruolo);
 					var table = $('#tabella-modale').DataTable();
 					table.clear();
-					$.get( "/provider/" + [[${accreditamentoWrapper.provider.id}]] + "/anagraficaList", function(data){
+					urlGet = [[@{/provider/}]] + [[${accreditamentoWrapper.provider.id}]] + "/anagraficaList";
+					$.get( urlGet, function(data){
 						var start = [[@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/|}]];
 
 						for(item in data){
