--- a/src/main/resources/templates/provider/providerValidate.html
+++ b/src/main/resources/templates/provider/providerValidate.html
@@ -12,8 +12,8 @@
 					<div class="x_title">
 						<h2 th:text="#{label.valutazione} + ' ' + #{label.info_provider}">label.info_provider</h2>
 						<div class="pull-right buttons-header">
-							<a th:if="${mode == null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoId}/show|}"></a>
-							<a th:if="${mode != null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoId}/${mode}|}"></a>
+							<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formProvider" type="submit"></button>
+							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoId}/validate|}"></a>
 						</div>
 						<div class="clearfix"></div>
 					</div>
