--- a/src/main/resources/templates/provider/providerFragment.html
+++ b/src/main/resources/templates/provider/providerFragment.html
@@ -82,8 +82,9 @@
 									<div class="col-lg-4 col-md-4 col-sm-10 col-xs-9">
 										<textarea th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.tipoOrganizzatore')}__].note}"></textarea>
 									</div>
+									<input type="hidden" th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.tipoOrganizzatore')}__].id}" />
 			                    </th:block>
-			                    <div th:if="${#fields.hasErrors('providerWrapper.provider.tipoOrganizzatore')}" class="alert" th:errors="${providerWrapper.provider.tipoOrganizzatore}"></div>
+			                    <div th:if="${editabile and #fields.hasErrors('providerWrapper.provider.tipoOrganizzatore')}" class="alert" th:errors="${providerWrapper.provider.tipoOrganizzatore}"></div>
 		                    </div>
 
 		                    <div th:if="${valutabile}" class="divider"></div>
@@ -128,8 +129,9 @@
 									<div class="col-lg-4 col-md-4 col-sm-10 col-xs-9">
 										<textarea th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.denominazioneLegale')}__].note}"></textarea>
 									</div>
+									<input type="hidden" th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.denominazioneLegale')}__].id}" />
 			                    </th:block>
-								<div th:if="${#fields.hasErrors('providerWrapper.provider.denominazioneLegale')}" class="alert" th:errors="${providerWrapper.provider.denominazioneLegale}"></div>
+								<div th:if="${editabile and #fields.hasErrors('providerWrapper.provider.denominazioneLegale')}" class="alert" th:errors="${providerWrapper.provider.denominazioneLegale}"></div>
 							</div>
 
 							<div th:if="${valutabile}" class="divider"></div>
@@ -186,8 +188,9 @@
 									<div class="col-lg-4 col-md-4 col-sm-10 col-xs-9">
 										<textarea th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.partitaIva')}__].note}"></textarea>
 									</div>
+									<input type="hidden" th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.partitaIva')}__].id}" />
 			                    </th:block>
-								<div th:if="${#fields.hasErrors('providerWrapper.provider.partitaIva')}" class="alert" th:errors="${providerWrapper.provider.partitaIva}"></div>
+								<div th:if="${editabile and #fields.hasErrors('providerWrapper.provider.partitaIva')}" class="alert" th:errors="${providerWrapper.provider.partitaIva}"></div>
 							</div>
 
 							<div th:if="${valutabile}" class="divider"></div>
@@ -233,8 +236,9 @@
 									<div class="col-lg-4 col-md-4 col-sm-10 col-xs-9">
 										<textarea th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.codiceFiscale')}__].note}"></textarea>
 									</div>
+									<input type="hidden" th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.codiceFiscale')}__].id}" />
 			                    </th:block>
-								<div th:if="${#fields.hasErrors('providerWrapper.provider.codiceFiscale')}" class="alert" th:errors="${providerWrapper.provider.codiceFiscale}"></div>
+								<div th:if="${editabile and #fields.hasErrors('providerWrapper.provider.codiceFiscale')}" class="alert" th:errors="${providerWrapper.provider.codiceFiscale}"></div>
 							</div>
 
 							<div th:if="${valutabile}" class="divider"></div>
@@ -292,8 +296,9 @@
 									<div class="col-lg-4 col-md-4 col-sm-10 col-xs-9">
 										<textarea th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.ragioneSociale')}__].note}"></textarea>
 									</div>
+									<input type="hidden" th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.ragioneSociale')}__].id}" />
 			                    </th:block>
-								<div th:if="${#fields.hasErrors('providerWrapper.provider.ragioneSociale')}" class="alert" th:errors="${providerWrapper.provider.ragioneSociale}"></div>
+								<div th:if="${editabile and #fields.hasErrors('providerWrapper.provider.ragioneSociale')}" class="alert" th:errors="${providerWrapper.provider.ragioneSociale}"></div>
 							</div>
 
 							<div th:if="${editabile}" class="divider-dashed"></div>
@@ -348,8 +353,9 @@
 									<div class="col-lg-4 col-md-4 col-sm-10 col-xs-9">
 										<textarea th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.naturaOrganizzazione')}__].note}"></textarea>
 									</div>
+									<input type="hidden" th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.naturaOrganizzazione')}__].id}" />
 			                    </th:block>
-								<div th:if="${#fields.hasErrors('providerWrapper.provider.naturaOrganizzazione')}" class="alert" th:errors="${providerWrapper.provider.naturaOrganizzazione}"></div>
+								<div th:if="${editabile and #fields.hasErrors('providerWrapper.provider.naturaOrganizzazione')}" class="alert" th:errors="${providerWrapper.provider.naturaOrganizzazione}"></div>
 							</div>
 
 							<div th:if="${editabile}" class="divider-dashed"></div>
@@ -404,8 +410,10 @@
 									<div class="col-lg-4 col-md-4 col-sm-10 col-xs-9">
 										<textarea th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.noProfit')}__].note}"></textarea>
 									</div>
+									<input type="hidden" th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.noProfit')}__].id}" />
 			                    </th:block>
-								<div th:if="${#fields.hasErrors('providerWrapper.provider.noProfit')}" class="alert" th:errors="${providerWrapper.provider.noProfit}"></div>
+								<div th:if="${editabile and #fields.hasErrors('providerWrapper.provider.noProfit')}" class="alert" th:errors="${providerWrapper.provider.noProfit}"></div>
+								<div th:if="${valutabile and #fields.hasErrors('providerWrapper.provider.noProfit')}" class="alert-error col-xs-12" th:errors="${providerWrapper.provider.noProfit}"></div>
 							</div>
 						</form>
 					</div>
