Implementata valutazione della sede

--- a/src/main/resources/templates/sede/sedeEdit.html
+++ b/src/main/resources/templates/sede/sedeEdit.html
@@ -23,7 +23,7 @@
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:include="sede/sedeFragment :: sede(true)"></th:block>
+					<th:block th:include="sede/sedeFragment :: sede('edit')"></th:block>
 
 				</div>
 			</div>
