--- a/src/main/resources/templates/sede/sedeShow.html
+++ b/src/main/resources/templates/sede/sedeShow.html
@@ -12,7 +12,7 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="${tipologiaSede == 'SedeLegale'} ? #{label.sede_legale} : #{label.sede_operativa}">label.info_sede</h2>
+						<h2 th:text="${sedeWrapper.tipologiaSede == 'SedeLegale'} ? #{label.sede_legale} : #{label.sede_operativa}">label.info_sede</h2>
 						<div class="pull-right buttons-header">
 							<a th:if="${mode == null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${sedeWrapper.accreditamentoId}/show|}"></a>
 							<a th:if="${mode != null}" class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${sedeWrapper.accreditamentoId}/${mode}|}"></a>
@@ -21,7 +21,7 @@
 					</div>
 
 					<div id="toModal">
-						<th:block th:include="sede/sedeFragment :: sede(false)"></th:block>
+						<th:block th:include="sede/sedeFragment :: sede('show')"></th:block>
 					</div>
 
 				</div>
