Implementata logica valutazione persona

--- a/src/main/resources/templates/persona/personaEdit.html
+++ b/src/main/resources/templates/persona/personaEdit.html
@@ -20,7 +20,7 @@
 						<div class="clearfix"></div>
 					</div>
 
-					<th:block th:include="persona/personaFragment :: persona(true)"></th:block>
+					<th:block th:include="persona/personaFragment :: persona('edit')"></th:block>
 
 				</div>
 			</div>
