--- a/src/main/resources/templates/persona/personaShow.html
+++ b/src/main/resources/templates/persona/personaShow.html
@@ -18,7 +18,7 @@
 					</div>
 
 					<div id="toModal">
-						<th:block th:include="persona/personaFragment :: persona(false)"></th:block>
+						<th:block th:include="persona/personaFragment :: persona('show')"></th:block>
 					</div>
 
 				</div>
